// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`0000: load succeeds when first rule allows 1`] = `
"success
First returned true"
`;

exports[`0010: load succeeds when any rule allows 1`] = `
"success
First returned false
Second returned true"
`;

exports[`0020: load fails when first rule throws 1`] = `
"failure: wild
First threw wild"
`;

exports[`0030: insert succeeds when all require allow 1`] = `
"success
First { id: '123', tenant_id: '42' } returned true
Second { id: '123', tenant_id: '42' } returned true"
`;

exports[`0040: insert fails when any require denies 1`] = `
"failure: table: cannot insert in vc:guest:master, because:
  Rule Require:First returned TOLERATE
  Rule Require:Second returned DENY
First returned true
Second returned false"
`;

exports[`0041: update fails when any require denies 1`] = `
"failure: table:123 is not updatable/deletable in vc:42, because:
  Rule Require:First returned TOLERATE
  Rule Require:Second returned DENY
First returned true
Second returned false"
`;

exports[`0042: delete fails when any require denies 1`] = `
"failure: table:123 is not updatable/deletable in vc:42, because:
  Rule Require:First returned TOLERATE
  Rule Require:Second returned DENY
First returned true
Second returned false"
`;

exports[`0043: update fails when user errors 1`] = `
"failure: table: tenant_id: "some one", tenant_id: "some two"
"
`;

exports[`0044: update succeeds user validation when field untouched 1`] = `
"success
"
`;

exports[`0050: insert fails when any require throws 1`] = `
"failure: wild
First returned true
Second threw wild"
`;

exports[`0060: load succeeds when any rule allows even if another rule throws EntNotReadableError 1`] = `
"success
First threw other_table:987 is not readable in vc:guest:master, because:
  ent access error
Second returned true"
`;

exports[`0070: load fails when any rule allows but another rule throws any wild exception 1`] = `
"failure: wild
First threw wild"
`;

exports[`0080: validations fail when no rules defined 1`] = `
"failure: table:123 is not readable in vc:guest:master, because:
  No "load" rules defined
"
`;

exports[`0080: validations fail when no rules defined 2`] = `
"failure: table: cannot insert in vc:guest:master, because:
  No "insert" rules defined
"
`;

exports[`0090: load fails with nice error message if only one rule 1`] = `
"failure: wild
First threw wild"
`;

exports[`0090: load fails with nice error message if only one rule 2`] = `
"failure: table:123 is not readable in vc:guest:master, because:
  Rule AllowIf:First returned SKIP
First threw wild
First returned false"
`;

exports[`0100: insert fails with nice error message if only one rule 1`] = `
"failure: wild
First threw wild"
`;

exports[`0100: insert fails with nice error message if only one rule 2`] = `
"failure: table: cannot insert in vc:guest:master, because:
  Rule AllowIf:First returned SKIP
First threw wild
First returned false"
`;

exports[`0110: insert succeeds when DenyIf rule evaluates 1`] = `
"success
First returned false"
`;

exports[`0120: load fails when DenyIf rule throws 1`] = `
"failure: table:123 is not readable in vc:guest:master, because:
  Rule DenyIf:First returned DENY, because:
    other_table:987 is not readable in vc:guest:master, because:
      ent access error
First threw other_table:987 is not readable in vc:guest:master, because:
  ent access error"
`;

exports[`0130: fail when tenant user id mismatches 1`] = `
"failure: table:123 is not readable in vc:999, because:
  tenant_id is expected to be "999", but got "42"
"
`;

exports[`0130: fail when tenant user id mismatches 2`] = `
"failure: table: cannot insert in vc:999, because:
  tenant_id is expected to be "999", but got "42"
"
`;

exports[`0130: fail when tenant user id mismatches 3`] = `
"failure: table: cannot insert in vc:999, because:
  tenant_id is expected to be "999", but got undefined
"
`;

exports[`0130: fail when tenant user id mismatches 4`] = `
"failure: table:123 is not updatable/deletable in vc:999, because:
  tenant_id is expected to be "999", but got "42"
"
`;

exports[`0130: fail when tenant user id mismatches 5`] = `
"failure: table:123 is not updatable/deletable in vc:999, because:
  tenant_id is expected to be "999", but got "42"
"
`;
